<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:layout_gravity="center"
        android:layout_marginTop="80sp"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:src = "@drawable/ic_bot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/character_bot"
        android:textColor="@color/light_gray"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:background="@color/light_blue"
        android:text="@string/start_chat"/>

</LinearLayout>

