<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_bot"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="123dp"
        android:layout_height="99dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_bot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/character_bot"
        android:textColor="@color/light_gray"
        android:layout_gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_chat_1"
        android:background="@drawable/bubble_chat"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/light_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_chat_2"
        android:background="@drawable/bubble_chat"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/light_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_chat_3"
        android:background="@drawable/bubble_chat"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/light_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_1"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/light_gray"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/chat_input"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:background="@drawable/boder" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/chat_input"
            android:layout_height="wrap_content"
            android:src = "@drawable/microphone"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/upload_img"/>


    </RelativeLayout>

</LinearLayout>